Added ini4j dependency and some other code

--- a/pom.xml
+++ b/pom.xml
@@ -74,7 +74,12 @@
         <dependency>
             <groupId>net.craftions</groupId>
             <artifactId>api</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.ini4j</groupId>
+            <artifactId>ini4j</artifactId>
+            <version>0.5.4</version>
         </dependency>
     </dependencies>
 </project>
